--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,164 @@
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
+    <div class="container">
+            <div class="row clearfix">
+                <div class="col-md-12 column">
+                    <div class="row clearfix">
+                        <div class="col-md-10 column">
+                            <nav class="navbar navbar-default" role="navigation">
+
+                                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                    <ul class="nav navbar-nav">
+                                        <li >
+                                            <a href="#">Link1</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Link2</a>
+                                        </li>
+                                        <li>
+                                            <a href="#">Link3</a>
+                                        </li>
+                                        <!--                                        <li class="dropdown">
+                                                                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
+                                                                                    <ul class="dropdown-menu">
+                                                                                        <li>
+                                                                                            <a href="#">Action</a>
+                                                                                        </li>
+                                                                                        <li>
+                                                                                            <a href="#">Another action</a>
+                                                                                        </li>
+                                                                                        <li>
+                                                                                            <a href="#">Something else here</a>
+                                                                                        </li>
+                                                                                        <li class="divider">
+                                                                                        </li>
+                                                                                        <li>
+                                                                                            <a href="#">Separated link</a>
+                                                                                        </li>
+                                                                                        <li class="divider">
+                                                                                        </li>
+                                                                                        <li>
+                                                                                            <a href="#">One more separated link</a>
+                                                                                        </li>
+                                                                                    </ul>
+                                                                                </li>-->
+                                    </ul>
+                                    <form class="navbar-form navbar-left" role="search">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" />
+                                        </div> <button type="submit" class="btn btn-default">חפש</button>
+                                    </form>
+                                    <!--                                    <ul class="nav navbar-nav navbar-right">
+                                                                            <li>
+                                                                                <a href="#">Link</a>
+                                                                            </li>
+                                                                            <li class="dropdown">
+                                                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
+                                                                                <ul class="dropdown-menu">
+                                                                                    <li>
+                                                                                        <a href="#">Action</a>
+                                                                                    </li>
+                                                                                    <li>
+                                                                                        <a href="#">Another action</a>
+                                                                                    </li>
+                                                                                    <li>
+                                                                                        <a href="#">Something else here</a>
+                                                                                    </li>
+                                                                                    <li class="divider">
+                                                                                    </li>
+                                                                                    <li>
+                                                                                        <a href="#">Separated link</a>
+                                                                                    </li>
+                                                                                </ul>
+                                                                            </li>
+                                                                        </ul>-->
+                                </div>
+
+                            </nav>
+                        </div>
+                        <div class="col-md-2 column">
+                            <img alt="140x140" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSfp4gihoRSCirDtpanf0-PWGyhxXktkEO8Diqvycty9LDYAY3k" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            
+            <div class="row clearfix">
+                <div class="col-md-4 column">
+                    <div class="row clearfix">
+                        <div class="col-md-12 column">
+                            <a  href="http://getbootstrap.com/getting-started/">
+                                <img  alt="140x140" src="http://lorempixel.com/140/140/" /> 
+                            </a>
+
+                        </div>
+                    </div>
+                    <div class="row clearfix">
+                        <div class="col-md-12 column">
+                            <a  href="http://getbootstrap.com/getting-started/">
+                                <h4> Heading1</h4>
+                            </a>
+
+                            <p>
+                                Donec id elit non mi porta gravida at eget metus.
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 column">
+                    <div class="row clearfix">
+                        <div class="col-md-12 column">
+                            <a  href="http://getbootstrap.com/getting-started/">
+                                <img  alt="140x140" src="http://lorempixel.com/140/140/" /> 
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row clearfix">
+                        <div class="col-md-12 column">
+                            <a  href="http://getbootstrap.com/getting-started/">
+                                <h4> Heading2</h4>
+                            </a>
+
+                            <p>
+                                Donec id elit non mi porta gravida at eget metus.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 column">
+                    <div class="row clearfix">
+                        <div class="col-md-12 column">
+                            <a  href="http://getbootstrap.com/getting-started/">
+                                <img  alt="140x140" src="http://lorempixel.com/140/140/" /> 
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row clearfix">
+                        <div class="col-md-12 column">
+                            <a  href="http://getbootstrap.com/getting-started/">
+                                <h4> Heading3</h4>
+                            </a>
+
+                            <p>
+                                Donec id elit non mi porta gravida at eget metus.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            
+            <div class="row clearfix">
+                <div class="col-md-12 column">
+                    <p>
+                        תחתית הדף
+                    </p>
+                </div>
+            </div>
+        </div>
   <ul class="menu">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
