--- a/app/index.html
+++ b/app/index.html
@@ -1,117 +1,108 @@
 <!doctype html>
 <html lang="en" ng-app="myApp">
-<head>
-  <meta charset="utf-8">
-  <title>My AngularJS App</title>
-  <link rel="stylesheet" href="css/app.css"/>
+    <head>
+        <meta charset="utf-8">
+        <title>My AngularJS App</title>
+        <link rel="stylesheet" href="css/app.css"/>
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+        <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 
         <!-- Optional theme -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
 
         <!-- Latest compiled and minified JavaScript -->
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-</head>
-<body>
-    <div class="container">
-            <div class="row clearfix">
-                <div class="col-md-12 column">
-                    <div class="row clearfix">
-                        <div class="col-md-10 column">
-                            <nav class="navbar navbar-default" role="navigation">
+    </head>
+    <body>
+        <div class="container">
 
+            <div class="row clearfix">
+                <div class="col-md-2 column">
+                    <img alt="140x140" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSfp4gihoRSCirDtpanf0-PWGyhxXktkEO8Diqvycty9LDYAY3k" />
+                </div>
+            </div>
+            <div class="row clearfix">
+                <div class="col-xs-12 column">
+                    <div class="row clearfix">
+                        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+                            <div class="container-fluid">
+                                <!-- Brand and toggle get grouped for better mobile display -->
+                                <div class="navbar-header">
+                                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                                        <span class="sr-only">Toggle navigation</span>
+                                        <span class="icon-bar"></span>
+                                        <span class="icon-bar"></span>
+                                        <span class="icon-bar"></span>
+                                    </button>
+                                    <a class="navbar-brand" href="#">Brand</a>
+                                </div>
+
+                                <!-- Collect the nav links, forms, and other content for toggling -->
                                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                     <ul class="nav navbar-nav">
-                                        <li >
-                                            <a href="#">Link1</a>
+                                        <li class="active"><a href="#">Link</a></li>
+                                        <li><a href="#">Link</a></li>
+                                        <li class="dropdown">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                                            <ul class="dropdown-menu">
+
+                                                <li><a href="#">Action</a></li>
+                                                <li><a href="#">Another action</a></li>
+                                                <li><a href="#">Something else here</a></li>
+                                                <li class="divider"></li>
+                                                <li><a href="#">Separated link</a></li>
+                                                <li class="divider"></li>
+                                                <li><a href="#">One more separated link</a></li>
+                                            </ul>
                                         </li>
-                                        <li>
-                                            <a href="#">Link2</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Link3</a>
-                                        </li>
-                                        <!--                                        <li class="dropdown">
-                                                                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
-                                                                                    <ul class="dropdown-menu">
-                                                                                        <li>
-                                                                                            <a href="#">Action</a>
-                                                                                        </li>
-                                                                                        <li>
-                                                                                            <a href="#">Another action</a>
-                                                                                        </li>
-                                                                                        <li>
-                                                                                            <a href="#">Something else here</a>
-                                                                                        </li>
-                                                                                        <li class="divider">
-                                                                                        </li>
-                                                                                        <li>
-                                                                                            <a href="#">Separated link</a>
-                                                                                        </li>
-                                                                                        <li class="divider">
-                                                                                        </li>
-                                                                                        <li>
-                                                                                            <a href="#">One more separated link</a>
-                                                                                        </li>
-                                                                                    </ul>
-                                                                                </li>-->
                                     </ul>
                                     <form class="navbar-form navbar-left" role="search">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" />
-                                        </div> <button type="submit" class="btn btn-default">חפש</button>
+                                            <input type="text" class="form-control" placeholder="Search">
+                                        </div>
+                                        <button type="submit" class="btn btn-default">Submit</button>
                                     </form>
-                                    <!--                                    <ul class="nav navbar-nav navbar-right">
-                                                                            <li>
-                                                                                <a href="#">Link</a>
-                                                                            </li>
-                                                                            <li class="dropdown">
-                                                                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
-                                                                                <ul class="dropdown-menu">
-                                                                                    <li>
-                                                                                        <a href="#">Action</a>
-                                                                                    </li>
-                                                                                    <li>
-                                                                                        <a href="#">Another action</a>
-                                                                                    </li>
-                                                                                    <li>
-                                                                                        <a href="#">Something else here</a>
-                                                                                    </li>
-                                                                                    <li class="divider">
-                                                                                    </li>
-                                                                                    <li>
-                                                                                        <a href="#">Separated link</a>
-                                                                                    </li>
-                                                                                </ul>
-                                                                            </li>
-                                                                        </ul>-->
-                                </div>
+                                    <ul class="nav navbar-nav navbar-right">
+                                        <li><a href="#">Link</a></li>
+                                        <li class="dropdown">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                                            <ul class="dropdown-menu">
+                                                <li><a href="#">Action</a></li>
+                                                <li><a href="#">Another action</a></li>
+                                                <li><a href="#">Something else here</a></li>
+                                                <li class="divider"></li>
+                                                <li><a href="#">Separated link</a></li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </div><!-- /.navbar-collapse -->
+                            </div><!-- /.container-fluid -->
+                        </nav>
 
-                            </nav>
-                        </div>
-                        <div class="col-md-2 column">
-                            <img alt="140x140" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSfp4gihoRSCirDtpanf0-PWGyhxXktkEO8Diqvycty9LDYAY3k" />
-                        </div>
+
                     </div>
                 </div>
             </div>
 
-            
+
             <div class="row clearfix">
-                <div class="col-md-4 column">
+                <div class="col-xs-4 column">
                     <div class="row clearfix">
-                        <div class="col-md-12 column">
+                        <div class="thumbnail">
+
                             <a  href="http://getbootstrap.com/getting-started/">
                                 <img  alt="140x140" src="http://lorempixel.com/140/140/" /> 
                             </a>
-
                         </div>
                     </div>
                     <div class="row clearfix">
-                        <div class="col-md-12 column">
+
+                        <div class="thumbnail">
+
                             <a  href="http://getbootstrap.com/getting-started/">
                                 <h4> Heading1</h4>
                             </a>
@@ -119,83 +110,41 @@
                             <p>
                                 Donec id elit non mi porta gravida at eget metus.
                             </p>
+                        </div> 
 
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 column">
-                    <div class="row clearfix">
-                        <div class="col-md-12 column">
-                            <a  href="http://getbootstrap.com/getting-started/">
-                                <img  alt="140x140" src="http://lorempixel.com/140/140/" /> 
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row clearfix">
-                        <div class="col-md-12 column">
-                            <a  href="http://getbootstrap.com/getting-started/">
-                                <h4> Heading2</h4>
-                            </a>
-
-                            <p>
-                                Donec id elit non mi porta gravida at eget metus.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 column">
-                    <div class="row clearfix">
-                        <div class="col-md-12 column">
-                            <a  href="http://getbootstrap.com/getting-started/">
-                                <img  alt="140x140" src="http://lorempixel.com/140/140/" /> 
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row clearfix">
-                        <div class="col-md-12 column">
-                            <a  href="http://getbootstrap.com/getting-started/">
-                                <h4> Heading3</h4>
-                            </a>
-
-                            <p>
-                                Donec id elit non mi porta gravida at eget metus.
-                            </p>
-                        </div>
                     </div>
                 </div>
             </div>
 
-            
-            <div class="row clearfix">
-                <div class="col-md-12 column">
-                    <p>
-                        תחתית הדף
-                    </p>
-                </div>
-            </div>
+
+
         </div>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-    <li><a href="#/view3">view2</a></li>
-  </ul>
+        <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+            <div class="container">
+זה הפוטר שלנו            </div>
+        </nav>
+        <ul class="menu">
+            <li><a href="#/view1">view1</a></li>
+            <li><a href="#/view2">view2</a></li>
+            <li><a href="#/view3">view2</a></li>
+        </ul>
 
-  <div ng-view></div>
+        <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
-  <div>Angular seed app: v<span app-version></span></div>
-  <div>Angular seed app: v<span app-version></span></div>
-  <div> </div>
+        <div>Angular seed app: v<span app-version></span></div>
+        <div>Angular seed app: v<span app-version></span></div>
+        <div>Angular seed app: v<span app-version></span></div>
+        <div> </div>
 
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <script src="lib/angular/angular.js"></script>
-  <script src="lib/angular/angular-route.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
-</body>
+        <!-- In production use:
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
+        -->
+        <script src="lib/angular/angular.js"></script>
+        <script src="lib/angular/angular-route.js"></script>
+        <script src="js/app.js"></script>
+        <script src="js/services.js"></script>
+        <script src="js/controllers.js"></script>
+        <script src="js/filters.js"></script>
+        <script src="js/directives.js"></script>
+    </body>
 </html>
