--- a/app/index.html
+++ b/app/index.html
@@ -17,8 +17,8 @@
         <!-- Latest compiled and minified JavaScript -->
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     </head>
-    <body>
-        <div class="container">
+    <body >
+        <div class="container" ng-controller="MyCtrl1">
 
             <div class="row clearfix">
                 <div class="col-md-2 column">
@@ -30,6 +30,7 @@
                     <div class="row clearfix">
                         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
                             <div class="container-fluid">
+                                
                                 <!-- Brand and toggle get grouped for better mobile display -->
                                 <div class="navbar-header">
                                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -62,7 +63,7 @@
                                     </ul>
                                     <form class="navbar-form navbar-left" role="search">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Search">
+                                            <input type="text" class="form-control" placeholder="Search" ng-model="query">
                                         </div>
                                         <button type="submit" class="btn btn-default">Submit</button>
                                     </form>
@@ -86,42 +87,43 @@
 
                     </div>
                 </div>
+
             </div>
 
 
             <div class="row clearfix">
-                <div class="col-xs-4 column">
-                    <div class="row clearfix">
-                        <div class="thumbnail">
+                <div class="well well-sm">
 
-                            <a  href="http://getbootstrap.com/getting-started/">
-                                <img  alt="140x140" src="http://lorempixel.com/140/140/" /> 
-                            </a>
+                    <div class="col-xs-4 column" ng-repeat="i in movies|filter:query">
+                        <div class="row clearfix">
+                            <div class="thumbnail">
+
+                                <a  href="http://getbootstrap.com/getting-started/">
+                                    <img  alt="140x140" ng-src="http://lorempixel.com/140/140/sports/{{i.age %10}}" /> 
+                                </a>
+<!--                        <div class="row clearfix">-->
+
+
+                                <a  href="http://getbootstrap.com/getting-started/">
+                                    <h4> {{i.name}}</h4>
+                                </a>
+
+                                <p>
+                                    {{i.about.substring(0,100)}}
+                                </p>
+
+                        <!--</div>-->
+                            </div>
                         </div>
-                    </div>
-                    <div class="row clearfix">
-
-                        <div class="thumbnail">
-
-                            <a  href="http://getbootstrap.com/getting-started/">
-                                <h4> Heading1</h4>
-                            </a>
-
-                            <p>
-                                Donec id elit non mi porta gravida at eget metus.
-                            </p>
-                        </div> 
-
                     </div>
                 </div>
             </div>
 
 
-
         </div>
         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
             <div class="container">
-זה הפוטר שלנו            </div>
+                זה הפוטר שלנו            </div>
         </nav>
         <ul class="menu">
             <li><a href="#/view1">view1</a></li>
