--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     </head>
     <body >
+      
         <div class="container" ng-controller="MyCtrl1">
 
             <div class="row clearfix">
@@ -25,101 +26,8 @@
                     <img alt="140x140" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSfp4gihoRSCirDtpanf0-PWGyhxXktkEO8Diqvycty9LDYAY3k" />
                 </div>
             </div>
-            <div class="row clearfix">
-                <div class="col-xs-12 column">
-                    <div class="row clearfix">
-                        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-                            <div class="container-fluid">
-                                
-                                <!-- Brand and toggle get grouped for better mobile display -->
-                                <div class="navbar-header">
-                                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                                        <span class="sr-only">Toggle navigation</span>
-                                        <span class="icon-bar"></span>
-                                        <span class="icon-bar"></span>
-                                        <span class="icon-bar"></span>
-                                    </button>
-                                    <a class="navbar-brand" href="#">Brand</a>
-                                </div>
-
-                                <!-- Collect the nav links, forms, and other content for toggling -->
-                                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                                    <ul class="nav navbar-nav">
-                                        <li class="active"><a href="#">Link</a></li>
-                                        <li><a href="#">Link</a></li>
-                                        <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                                            <ul class="dropdown-menu">
-
-                                                <li><a href="#">Action</a></li>
-                                                <li><a href="#">Another action</a></li>
-                                                <li><a href="#">Something else here</a></li>
-                                                <li class="divider"></li>
-                                                <li><a href="#">Separated link</a></li>
-                                                <li class="divider"></li>
-                                                <li><a href="#">One more separated link</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                    <form class="navbar-form navbar-left" role="search">
-                                        <div class="form-group">
-                                            <input type="text" class="form-control" placeholder="Search" ng-model="query">
-                                        </div>
-                                        <button type="submit" class="btn btn-default">Submit</button>
-                                    </form>
-                                    <ul class="nav navbar-nav navbar-right">
-                                        <li><a href="#">Link</a></li>
-                                        <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="#">Action</a></li>
-                                                <li><a href="#">Another action</a></li>
-                                                <li><a href="#">Something else here</a></li>
-                                                <li class="divider"></li>
-                                                <li><a href="#">Separated link</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </div><!-- /.navbar-collapse -->
-                            </div><!-- /.container-fluid -->
-                        </nav>
-
-
-                    </div>
-                </div>
-
-            </div>
-
-
-            <div class="row clearfix">
-                <div class="well well-sm">
-
-                    <div class="col-xs-4 column" ng-repeat="i in movies|filter:query">
-                        <div class="row clearfix">
-                            <div class="thumbnail">
-
-                                <a  href="http://getbootstrap.com/getting-started/">
-                                    <img  alt="140x140" ng-src="http://lorempixel.com/140/140/sports/{{i.age %10}}" /> 
-                                </a>
-<!--                        <div class="row clearfix">-->
-
-
-                                <a  href="http://getbootstrap.com/getting-started/">
-                                    <h4> {{i.name}}</h4>
-                                </a>
-
-                                <p>
-                                    {{i.about.substring(0,100)}}
-                                </p>
-
-                        <!--</div>-->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
+            <main-menu> </main-menu>
+            <main-body> </main-body>
         </div>
         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
             <div class="container">
@@ -133,10 +41,6 @@
 
         <div ng-view></div>
 
-        <div>Angular seed app: v<span app-version></span></div>
-        <div>Angular seed app: v<span app-version></span></div>
-        <div>Angular seed app: v<span app-version></span></div>
-        <div> </div>
 
         <!-- In production use:
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
